05.Governance-Risk-Compliance/exercise/exercise-application/application-resources/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysqld-exporter
  name: mysqld-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqld-exporter
  template:
    metadata:
      labels:
        app: mysqld-exporter
    spec:
      containers:
        - env:
          - name: DATA_SOURCE_NAME
            value: root:cmVkaGF0@(mariadb.mariadb-metrics.svc.cluster.local:3306)/
          image: docker.io/prom/mysqld-exporter:v0.15.0
          imagePullPolicy: Always
          name: mysqld-exporter
          ports:
          - containerPort: 9104
            protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
