05.Governance-Risk-Compliance/exercise/exercise-application/application-resources/exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysqld-exporter
  name: mysqld-exporter
spec:
  ports:
  - name: 9104-tcp
    port: 9104
    protocol: TCP
    targetPort: 9104
  selector:
    app: mysqld-exporter
  sessionAffinity: None
  type: ClusterIP
