05.Governance-Risk-Compliance/exercise/exercise-application/application-resources/exporter-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mysqld-exporter
  name: mysqld-exporter
spec:
  port:
    targetPort: 9104-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: mysqld-exporter
    weight: 100
  wildcardPolicy: None
